# chers

./: Cargo.toml  LICENSE  README.md  bacon.toml  play_game.sh
.github/workflows/: ci.yml
src/: board.rs  consts.rs  defs.rs  engine.rs  eval.rs  find_magics.rs  main.rs  moves.rs  search.rs  tests.rs  uci.rs  utils.rs
src/board/: consts.rs  defs.rs  fen.rs  history.rs  makemove.rs  state.rs  zobrist.rs
src/engine/: commands.rs  main_loop.rs  options.rs  position.rs  thread.rs  transposition.rs  transposition_table.rs
src/eval/: defs.rs  psqt.rs
src/moves/: consts.rs  defs.rs  init_moves.rs  legalmoves.rs  list.rs  magics.rs  movegenerator.rs
src/search/: alpha_beta.rs  consts.rs  defs.rs  draw.rs  iter_deep.rs  quiescence.rs  time.rs
src/tests/: movegen.rs
src/uci/: consts.rs  defs.rs  parser.rs  search_info.rs
